[metadata]
name = openstack-qa-tools
summary = Python scripts for use in OpenStack's QA process
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    os-qa-counters = openstack_qa_tools.collect:main
subunit2sql.target =
    openstack_qa_statsd = openstack_qa_tools.counters2statsd:AttachmentResult

[files]
packages =
    openstack_qa_tools

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
