[metadata]
name = os-performance-tools
summary = Python scripts for use in OpenStack's QA process
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/os-performance-tools/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[entry_points]
console_scripts =
    os-collect-counters = os_performance_tools.collect:main
subunit2sql.target =
    os_counters_statsd = os_performance_tools.counters2statsd:AttachmentResult

[files]
packages =
    os_performance_tools

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
