[metadata]
name = os-performance-tools
summary = Python scripts for use in OpenStack's QA process
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/os-performance-tools/latest/
python_requires = >=3.5
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython


[entry_points]
console_scripts =
    os-collect-counters = os_performance_tools.collect:main
subunit2sql.target =
    os_counters_statsd = os_performance_tools.counters2statsd:AttachmentResult

[files]
packages =
    os_performance_tools
